@@ -79,6 +79,7 @@
     * 0361 FIX: The page linked by "new rule" can now be bookmarked again
     * 0341 FIX: Avoid rare exception in WATO when deleting a host...
     * 0376 FIX: LDAP: Default configuration of attributes is reflected within WATO now
+    * 0346 FIX: Fix folder visibility in WATO for unpriviledged users...
 
     Notifications:
     * 0362 sms: now searching PATH for sendsms and smssend commands...
